--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -58,6 +58,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Set clean Docker username
+        id: docker
+        run: |
+          CLEAN_USERNAME=$(echo "${{ secrets.DOCKER_USERNAME }}" | tr -d '\n\r' | xargs)
+          echo "username=$CLEAN_USERNAME" >> $GITHUB_OUTPUT
       - name: Scan for vulnerabilities
         uses: aquasecurity/trivy-action@master
         with:
