--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -87,6 +87,7 @@ jobs:
           kubectl create namespace staging --dry-run=client -o yaml | kubectl apply -f -
           sed 's/latest/${{ github.sha }}/g' kubernetes/deployment.yaml | kubectl apply -f - -n staging
           kubectl apply -f kubernetes/service.yaml -n staging
+          kubectl apply -f kubernetes/ingress.yaml -n staging
 
   manual-approval:
     needs: deploy-staging
