--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: demo-app
-        image: madhavsurajyashaswini298/demo-app:latest  # Updated after pushing
+        image: ${DOCKER_USERNAME}/demo-app:${IMAGE_TAG}  # Updated after pushing
         ports:
         - containerPort: 3000
         readinessProbe:  # Ensures new pods are healthy before serving
