--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -1,6 +1,6 @@
 apiVersion: apps/v1
 kind: Deployment
-meta:
+metadata:
   name: demo-app
   namespace: staging
 spec:
@@ -9,7 +9,7 @@ spec:
     matchLabels:
       app: demo-app
   template:
-    meta:
+    metadata:
       labels:
         app: demo-app
     spec:
