--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: demo-app
-        image: ${DOCKER_USERNAME}/demo-app:${IMAGE_TAG}  # Updated after pushing
+        image: madhavsurajyashaswini298/demo-app:${IMAGE_TAG}  # Updated after pushing
         ports:
         - containerPort: 3000
         readinessProbe:  # Ensures new pods are healthy before serving
