--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "mocha test.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "prom-client": "^15.1.3"
   },
   "devDependencies": {
     "mocha": "^9.0.0",
