--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -12,6 +12,10 @@ spec:
     metadata:
       labels:
         app: demo-app
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/path: "/metrics" 
+        prometheus.io/port: "3000"
     spec:
       imagePullSecrets:
       - name: dockerhub-cred 
